# computers-computers

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  config.toml  flake.nix  update_theme.sh
blog-posts/: multicraft-stretch.md
blog-posts/radical-left/: index.md
content/: _index.md  about.md
content/posts/: goodbye-tesla-hello-bmw.md  libcat.md  multicraft-stretch.md  syncy-workflows.md
content/posts/goodbye-tesla-hello-bmw/: index.md
content/posts/goodbye-tesla-hello-bmw/images/: result
content/posts/libcat/: index.md
content/posts/radical-left/: bib.json  index.md
layouts/_default/: single.ris
layouts/partials/: cover.html  img.html
layouts/shortcodes/: img.html
src/: generate.rs  main.rs  markdown.rs
src/blogposts/: mod.rs  template.rs
src/elements/: code.rs  mod.rs
themes/terminal/: webpack.config.js
themes/terminal/assets/css/: footer.css  pink.css
themes/terminal/layouts/_default/: single.html
themes/terminal/layouts/partials/: footer.html  head.html
themes/terminal/static/assets/: pink.css  style.css
