[package]
name = "computers-computers"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.9"
lol_html = "0.3"
clap = { version = "4", features = [ "derive" ] }
anyhow = "1"
once_cell = "1"
chrono = "0.4"
serde = { version = "1", features = [ "derive" ] }
syntect = "5"
log = "0.4"
simple_logger = "4"
minify-html = "0.10"
